[gd_scene load_steps=2 format=3 uid="uid://ckn5dttugxo5o"]

[ext_resource type="Script" path="res://scenes/enemies/enemy.gd" id="1_fvloq"]

[node name="Enemy" type="CharacterBody3D" groups=["enemy"]]
script = ExtResource("1_fvloq")

[node name="RotationController" type="Node3D" parent="."]

[node name="Interaction" type="RayCast3D" parent="RotationController"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="KillZone" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillZone"]

[node name="Timers" type="Node" parent="."]

[node name="InteractionTimer" type="Timer" parent="Timers"]
wait_time = 0.25
autostart = true

[node name="FindPathTimer" type="Timer" parent="Timers"]
wait_time = 0.3
autostart = true

[node name="WanderingTimer" type="Timer" parent="Timers"]
one_shot = true

[connection signal="link_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_link_reached"]
[connection signal="target_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_target_reached"]
[connection signal="waypoint_reached" from="NavigationAgent3D" to="." method="_on_navigation_agent_3d_waypoint_reached"]
[connection signal="body_entered" from="KillZone" to="." method="_on_kill_zone_body_entered"]
[connection signal="timeout" from="Timers/InteractionTimer" to="." method="_on_interaction_timer_timeout"]
[connection signal="timeout" from="Timers/FindPathTimer" to="." method="_on_find_path_timer_timeout"]
[connection signal="timeout" from="Timers/WanderingTimer" to="." method="_on_wandering_timer_timeout"]
